[gd_scene load_steps=17 format=2]

[ext_resource path="res://FallGame/Bush.tscn" type="PackedScene" id=1]
[ext_resource path="res://FallGame/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://FallGame/Birds.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/FallGame/Sprites/Heart1.png" type="Texture" id=4]
[ext_resource path="res://FallGame/Level.gd" type="Script" id=5]
[ext_resource path="res://FallGame/FallGuy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/FallGame/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/FallGame/Sprites/Heart2.png" type="Texture" id=8]
[ext_resource path="res://FallGame/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/FallGame/Animations/Grass1.png" type="Texture" id=10]
[ext_resource path="res://Assets/FallGame/Animations/Grass2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Moving",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180.94, 10 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Full",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Empty",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 7 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Sky" type="ColorRect" parent="."]
margin_right = 1040.0
margin_bottom = 619.0
color = Color( 0.466667, 0.670588, 0.94902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="ColorRect" parent="."]
visible = false
margin_left = -131.0
margin_top = 94.0
margin_right = 1169.0
margin_bottom = 594.0
rect_rotation = 20.0
color = Color( 0.0509804, 0.72549, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 442.482, 566.89 )
rotation = 0.349066
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "Moving"
frame = 1
playing = true

[node name="Bush" parent="." instance=ExtResource( 1 )]

[node name="Rock" parent="." instance=ExtResource( 2 )]

[node name="FallGuy" parent="." instance=ExtResource( 6 )]
position = Vector2( 279.584, 209.671 )

[node name="Birds" parent="." instance=ExtResource( 3 )]

[node name="Coin" parent="." instance=ExtResource( 9 )]

[node name="Coin2" parent="." instance=ExtResource( 9 )]

[node name="Coin3" parent="." instance=ExtResource( 9 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 283.375, 300.481 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="PlayerFloor" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="ObstacleTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 223.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_top = 437.0
margin_right = 223.0
margin_bottom = 600.0
custom_constants/separation = 35
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 44.0
margin_right = 223.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 118.0
margin_right = 223.0
margin_bottom = 118.0
custom_constants/separation = 50
alignment = 1

[node name="Container1" type="CenterContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="AnimatedSprite" parent="CanvasLayer/VBoxContainer/HBoxContainer/Container1"]
position = Vector2( 337.722, 10.1829 )
scale = Vector2( 4, 4 )
frames = SubResource( 4 )
animation = "Full"
playing = true
offset = Vector2( -84.4305, -2.54572 )

[node name="Container2" type="CenterContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart2" type="AnimatedSprite" parent="CanvasLayer/VBoxContainer/HBoxContainer/Container2"]
position = Vector2( 337.722, 10.1829 )
scale = Vector2( 4, 4 )
frames = SubResource( 4 )
animation = "Full"
playing = true
offset = Vector2( -84.4305, -2.54572 )

[node name="Container3" type="CenterContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart3" type="AnimatedSprite" parent="CanvasLayer/VBoxContainer/HBoxContainer/Container3"]
position = Vector2( 337.722, 10.1829 )
scale = Vector2( 4, 4 )
frames = SubResource( 4 )
animation = "Full"
playing = true
offset = Vector2( -84.4305, -2.54572 )

[node name="CoinsLabel" type="Label" parent="CanvasLayer"]
margin_left = 204.164
margin_top = 513.642
margin_right = 427.164
margin_bottom = 552.642
custom_fonts/font = SubResource( 5 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="EndTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GapTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="move_bird_coins" from="." to="Coin3" method="_on_Level_move_bird_coins"]
[connection signal="move_birds" from="." to="Birds" method="_on_Level_move_birds"]
[connection signal="move_bush" from="." to="Bush" method="_on_Level_move_bush"]
[connection signal="move_bush_coins" from="." to="Coin2" method="_on_Level_move_bush_coins"]
[connection signal="move_rock" from="." to="Rock" method="_on_Level_move_rock"]
[connection signal="move_rock_coins" from="." to="Coin" method="_on_Level_move_rock_coins"]
[connection signal="player_entered_obstacle" from="Bush" to="." method="_on_player_entered_obstacle"]
[connection signal="player_entered_obstacle" from="Rock" to="." method="_on_player_entered_obstacle"]
[connection signal="player_entered_obstacle" from="Birds" to="." method="_on_player_entered_obstacle"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="timeout" from="GapTimer" to="." method="_on_GapTimer_timeout"]
